# esp32-garden-sensor

./: .gitignore  Cargo.toml  custom_partitions.csv  dump_nvs  espflash.toml  sdkconfig.defaults
.cargo/: config.toml
src/: adc_helper.rs  board.rs  board_helper.rs  configuration.rs  main.rs  main_configuration.rs  moisture_sensor.rs  nvs_configuration.rs  post_data.rs  settings_page.html  string_error.rs  template.rs  template_helper.rs  wifi_helper.rs
src/board/: board.rs  buttons.rs  on_board_led.rs  sensors.rs
src/configuration/: main_configuration.rs  nvs_configuration.rs
src/html/: base.html  form_moisture.html  form_water_level.html
src/sensors/: battery_sensor.rs  hcsr04_sensor.rs  moisture_sensor.rs  sensor.rs
